--- a/css/map.css
+++ b/css/map.css
@@ -63,7 +63,7 @@ input.btnstyle,
 .btnstyle:hover {display:inline-block; text-align:center; position:relative; cursor:pointer; text-decoration:none !important; vertical-align:middle;} /* 기본 설정 */
 
 .btnstyle,
-.btnstyle:hover {border-radius:2px;  letter-spacing:-0.01em;} /* 라운드 크기 및 자간 간격 기본 설정 */
+.btnstyle:hover {border-radius:1px;  letter-spacing:-0.01em;} /* 라운드 크기 및 자간 간격 기본 설정 */
 
 
 /* 색상 값 부분*/
@@ -86,7 +86,7 @@ input.btnstyle,
 .btnstyle.disabled {pointer-events:none; cursor:default; color:rgba(255, 255, 255, 0.4) !important; opacity:0.5;}
 
 /* 폰트 bold */
-.amb_btnstyle.b                {font-weight:500;}
+.amb_btnstyle.b               {font-weight:500;}
 
 
 /* *******  amb_btnstyle에 직접 사이즈 class를 적용한 경우 ******* */
@@ -110,7 +110,7 @@ input.btnstyle,
 .ui-rangeSlider .ui-rangeSlider-innerBar{height:6px; margin:3px 0px; background:#ddd; border-radius:3px;}
 .ui-rangeSlider .ui-rangeSlider-handle{width:0px; height:100%; background:#aaa;	background:rgba(100,100,100, 0.3); cursor:col-resize;}
 .ui-rangeSlider .ui-rangeSlider-bar{margin:0px 0; background:transparent; height:100%;	cursor:move; cursor:grab; cursor:-moz-grab;}
-.ui-rangeSlider .ui-rangeSlider-bar:before {display:block; content:''; width:100%; height:6px; margin:3px 0; background-color:rgb(42,124,221); border-radius:3px;}
+.ui-rangeSlider .ui-rangeSlider-bar:before {display:block; content:''; width:100%; height:6px; margin:3px 0; background-color:#2a7cdd; border-radius:3px;}
 .ui-rangeSlider-arrow{display:none;}
 .ui-rangeSlider-container{height:100%;}
 .ui-rangeSlider-withArrows .ui-rangeSlider-container{margin:0 11px;}
@@ -197,17 +197,17 @@ body	 {min-height:600px;}
 .rightArea .mapBtn {position:absolute; z-index:1; padding:0px 2px; background-color:#fff; color:#000; border:1px solid #333; height:30px; line-height:28px; cursor:pointer; text-align:center;}
 .rightArea .mapBtn:hover {}
 
-.rightArea .mapBtn.active {background-color:rgb(42,124,221); color:#fff; border:1px solid #333; opacity:1;}
+.rightArea .mapBtn.active {background-color:#2a7cdd; color:#fff; border:1px solid #333; opacity:1;}
 
 /* 면적재기 */
-.btnCalcArea     {width:62px; top:60px; right:10px;}
+.btnCalcArea     {width:62px; top:15px; right:10px;}
 /* 거리재기 */
-.btnCalcDistance {width:62px; top:89px; right:10px;}
+.btnCalcDistance {width:62px; top:44px; right:10px;}
 
 /*************************************/
 /* GNB  Area */
 .gnbArea {clear:both; text-align:right;}
-.gnbArea h1{display:inline-block; height:100%; width:auto; margin:0 30px 0 10px; vertical-align:middle; float:left; border:1px solid #fff;}
+.gnbArea h1{display:inline-block; height:100%; width:auto; margin:0 30px 0 10px; vertical-align:middle; float:left; border:0px solid #fff;}
 .gnbArea h1 .logo {display:block; width:150px; height:100%;}
 
 .gnbArea .dvNoticeTicker {display:inline-block; display:none; width:400px; overflow:hidden; position:relative; vertical-align:middle;}
@@ -235,8 +235,7 @@ body	 {min-height:600px;}
 .dvBtnArea {font-size:13px; letter-spacing:-0.05em;  display:inline-block; position:relative; vertical-align:top; height:100%; margin-right:10px;}
 .dvBtnArea .mapBtn {position:absolute; z-index:1; padding:0px 2px; background-color:#545759; color:#fff; border:1px solid #6c6e71; height:30px; line-height:28px; cursor:pointer; text-align:center;}
 .dvBtnArea .mapBtn:hover {}
-.dvBtnArea .mapBtn.active {background-color:rgb(42,124,221); color:#fff; border:1px solid #333; opacity:1;}
-
+.dvBtnArea .mapBtn.active {background-color:#2a7cdd; color:#fff; border:1px solid rgba(255,255,255,0.2); opacity:1;}
 
 /* 위성 */
 .btnMapSatellite {width:54px; top:10px; right:0px;}
@@ -256,7 +255,7 @@ body	 {min-height:600px;}
 .dvTimeview .dvAutoYearRange .btnAutoYear i.btnIcon {background-image:url('../img/icon_playstop.png'); background-repeat:no-repeat; background-color:#fff;} 
 
 .dvTimeview .dvAutoYearRange .btnAutoYear input[type='checkbox'] + i.btnIcon          {background-position:0 -31px; background-size:60px 60px;}
-.dvTimeview .dvAutoYearRange .btnAutoYear input[type='checkbox']:checked + i.btnIcon  {background-position:-30px -1px; background-size:60px 60px;  background-color:rgb(42,124,221);}
+.dvTimeview .dvAutoYearRange .btnAutoYear input[type='checkbox']:checked + i.btnIcon  {background-position:-30px -1px; background-size:60px 60px;  background-color:#2a7cdd;}
 .dvTimeview .dvAutoYearRange .btnAutoYear input[type='checkbox']:disabled + i.btnIcon {opacity:0.5; cursor:not-allowed;}
 
 .dvTimeview .dvYearRange {margin-left:36px;}
@@ -293,7 +292,7 @@ body	 {min-height:600px;}
 .lnbArea .memuList li > a.menu04 > i {background-position:0 -150px;}
 .lnbArea .memuList li > a.menu05 > i {background-position:0 -180px;}
 
-.lnbArea .memuList li.active > a {background-color:rgb(42,124,221);}
+.lnbArea .memuList li.active > a {background-color:#2a7cdd;}
 .lnbArea .memuList li.active > a > i,
 .lnbArea .memuList li.active > a > span {opacity:1; font-weight:bold;}
 
@@ -306,21 +305,16 @@ body	 {min-height:600px;}
 /*************************************/
 /* LNB  lnbCont */
 .lnbCont {display:block; opacity:1.0;}
-.lnbContWrap {animation:ani_down 0.2s ease-out 0s 1 alternate;  display:none; width:100%; height:100%; position:relative;  border-right:1px solid #aaa; border-left:0px solid #aaa; margin:0px 0 0 0px; box-shadow:1px 0 2px rgba(0,0,0,0.2);}
+.lnbContWrap {animation:ani_down 0.2s ease-out 0s 1 alternate;  display:none; width:100%; height:100%; min-width:200px; position:relative;  border-right:1px solid #aaa; border-left:0px solid #aaa; margin:0px 0 0 0px; box-shadow:1px 0 2px rgba(0,0,0,0.2);}
 .lnbContWrap:before {}
-.lnbContWrap .headArea {border-bottom:1px solid #ccc; display:block; position:absolute; width:100%; top:0; left:0; right:0; background-color:rgb(42,124,221); height:50px;}
+.lnbContWrap .headArea {border-bottom:1px solid #ccc; display:block; position:absolute; width:100%; top:0; left:0; right:0; background-color:#2a7cdd; height:50px;}
 .lnbContWrap .bodyArea {border-left:1px solid #ccc; position:absolute; width:100%; top:50px; bottom:50px; left:0; right:0; margin:0 0; background:#f7f7f7; overflow:auto; }
 .lnbContWrap .bodyArea::-webkit-scrollbar {width:8px; height:8px;}
 .lnbContWrap .footArea {border:1px solid #ccc; border-right:0; display:block;  position:absolute; width:100%; bottom:0; left:0; right:0; background:#fff; height:50px; line-height:46px; text-align:right; padding:0 15px;}
 
 .lnbContWrap .headArea h2 {color:#fff; display:inline-block; padding:0 15px; font-size:14px; line-height:48px;}
-.lnbContWrap .headArea .close {display:block; position:absolute; width:50px; height:50px; right:0; top:0; border-left:0px solid rgba(255,255,255,0.2);}
-.lnbContWrap .headArea .close:before {
-	font-family: 'AMB-iconfont' !important; speak:none; font-style:normal; font-weight:normal; font-variant:normal; text-transform:none; line-height:1;
-	-webkit-font-smoothing: antialiased; -moz-osx-font-smoothing: grayscale;
-	display:block; width:100%; height:100%; color:#fff; font-size:22px; line-height:48px;
-	content:'\e90e';
-}
+.lnbContWrap .headArea .close {display:block; position:absolute; width:50px; height:50px; right:0; top:0; border-left:0px solid rgba(255,255,255,0.2); color:#fff; opacity:0.8; font-size:18px;}
+.lnbContWrap .headArea .close:hover {background:rgba(0,0,0,0.05);}
 
 /*************************************/
 /* LNB  lnbCont 주소 검색 */
@@ -338,8 +332,30 @@ body	 {min-height:600px;}
 
 
 /* modal */
-.modal.in .modal-dialog {z-index:1041;}
-.modal {text-align: center; padding: 0!important;}
+.modal.fade .modal-dialog {
+  -webkit-transition: -webkit-transform 0.1s ease-out;
+  -moz-transition: -moz-transform 0.1s ease-out;
+  -o-transition: -o-transform 0.1s ease-out;
+  transition: transform 0.1s ease-out;
+}
 
-.modal:before {content: '';  display: inline-block;  height: 100%;  vertical-align: middle;  margin-right: -4px;}
-.modal-dialog {display: inline-block;  text-align: left;  vertical-align: middle;}
+.modal {background:rgba(0,0,0,0.5); text-align:center; padding:0 !important; width:100%; height:100%; display:none;}
+.modal.in .modal-dialog {z-index:1041; top:50%;
+	-webkit-transform: translate(0, -50%);
+    -ms-transform: translate(0, -50%);
+    -o-transform: translate(0, -50%);
+    transform: translate(0, -50%);
+}
+.modal .modal-dialog {display:block;  text-align:left;  vertical-align:middle; margin:0 auto; max-width:96%;}
+
+.modal .modal-content {display:block; border-radius:2px; margin:0 auto;}
+.modal .modal-header {height:50px; padding:0 0; line-height:50px; width:100%; border-bottom:1px solid #ccc;}
+.modal .modal-header h5 {height:100%; font-size:16px; display:inline-block; margin-left:15px; line-height:1; height:auto;}
+.modal .modal-header .close {display:inline-block; width:50px; height:100%; opacity:1; }
+.modal .modal-header .close:hover {background:rgba(0,0,0,0.05);}
+.modal .modal-header .close i {display:block; height:100%; line-height:50px;}
+
+.modal .modal-body {background:#f7f7f7; overflow:auto; max-height:;}
+
+.modal .modal-footer {border-top:1px solid #ccc;}
+
