--- a/css/map.css
+++ b/css/map.css
@@ -215,7 +215,7 @@ table.tableStyle.formStyle td  {border-color:#ccc #ccc #ccc #ccc;}
 /*************************************/
 /* layout */
 .mapArea {position:absolute; z-index:0; top:50px; bottom:0; left:60px; right:0;  padding-top:0px; overflow:auto; }
-#map     {width:100%; height:100%; margin:0 0; padding:0; display:;}
+#map     {width:100%; height:100%; margin:0 0; padding:0; display:none;}
 .gnbArea {position:absolute; z-index:2; top:0; left:0; width:100%; height:50px;  border-bottom:1px solid rgba(255,255,255,0.2); box-shadow:0 2px 2px rgba(0,0,0,0.05); background:#333336;}
 .lnbArea {position:absolute; z-index:4; top:50px; left:0; bottom:0; width:60px; border-bottom:1px solid #aaa; background:#333336; box-shadow:1px 0px 2px rgba(0,0,0,0.2);}
 .lnbCont {position:absolute; z-index:3; top:50px; left:60px; bottom:0; display:none;}
@@ -233,7 +233,15 @@ body	 {min-height:600px;}
 /* dvIntro */
 #dvIntro   {position:fixed; padding:0; margin:0; top:0; left:0; width:100%; height:100%; background:rgba(255,255,255,0); z-index: 11;}
 
+#dvStreetView {position:fixed; padding:0; margin:0;	top:50px; left:0; width:100%; height:100%;	background: rgb(255, 255, 255);	z-index:9; display:none;}
+#dvStreetViewHeader {padding:0;	margin:0; width:100%; height:30px; background-color:#000;}
+#dvStreetViewContent, #dvStreet {padding:0;	margin:0; width:100%; height:100%; background-color:#000;}
+#dvStreetMini {width:300px; height:300px;}
 /*************************************/
+
+/* 파노라마 div */
+.pano-close {text-decoration:none;}
+.pano-close span {color:#fff; font-size:1.5em; position:relative; top:2px; left:98%;}
 
 /* 지도 우측 버튼 */
 .rightArea {font-size:13px; letter-spacing:-0.05em;}
@@ -350,7 +358,7 @@ body	 {min-height:600px;}
 /*************************************/
 /* LNB  lnbCont */
 .lnbCont {display:block; opacity:1.0;}
-.lnbContWrap {animation:ani_down 0.2s ease-out 0s 1 alternate;  display:none; width:100%; height:100%; min-width:200px; position:relative;  border-right:1px solid #aaa; border-left:0px solid #aaa; margin:0px 0 0 0px; box-shadow:1px 0 2px rgba(0,0,0,0.2);}
+.lnbContWrap {animation:ani_down 0.2s ease-out 0s 1 alternate;  display:none; width:100%; height:100%; min-width:200px; position:relative;  border-right:1px solid #aaa; border-left:0px solid #aaa; margin:0px 0 0 0px; box-shadow:1px 0 2px rgba(0,0,0,0.2); background:#fff;}
 .lnbContWrap:before {}
 .lnbContWrap .headArea {border-bottom:1px solid #ccc; display:block; position:absolute; width:100%; top:0; left:0; right:0; background-color:#2a7cdd; height:50px;}
 .lnbContWrap .bodyArea {border-left:1px solid #ccc; position:absolute; width:100%; top:50px; bottom:50px; left:0; right:0; margin:0 0; background:#f5f6f7; overflow:auto; }
@@ -360,6 +368,11 @@ body	 {min-height:600px;}
 .lnbContWrap .headArea h2 {color:#fff; display:inline-block; padding:0 15px; font-size:14px; line-height:48px;}
 .lnbContWrap .headArea .close {display:block; position:absolute; width:50px; height:50px; right:0; top:0; border-left:0px solid rgba(255,255,255,0.2); color:#fff; opacity:0.8; font-size:18px;}
 .lnbContWrap .headArea .close:hover {background:rgba(0,0,0,0.05);}
+
+.lnbContWrap .footerEtcText {border:1px solid #ccc; border-right:0; border-bottom:0; padding:15px 20px 15px 20px; font-size:12px; bottom:50px; position:absolute; background:rgba(0,0,0,0.00); color:#666;}
+.lnbContWrap .footerEtcText .tit {font-weight:bold; position:relative; padding:0 0 0 15px; color:#333; margin-bottom:3px;}
+.lnbContWrap .footerEtcText .tit:before {display:inline-block; content:'※'; font-weight:; position:absolute; left:-2px;}
+.lnbContWrap .footerEtcText .cont {line-height:1.5em;}
 
 /*************************************/
 /* LNB  lnbCont 주소 검색 */
@@ -473,3 +486,4 @@ body	 {min-height:600px;}
 .mulgunList {border:0px solid #000; overflow:; padding:20px;}
 .mulgunList li {padding:4px 0;}
 .mulgunList li:hover .rdchBox {animation:ani_down 0.2s ease-out 0s 1 alternate;}
+
