--- a/css/map.css
+++ b/css/map.css
@@ -55,6 +55,13 @@
   100% {opacity:1; transform: translateY(0px);}
 }
 
+@keyframes bounceIn{
+  0%   {opacity: 0;   transform: scale(0.3) translate3d(0,0,0);}
+  50%  {opacity: 0.9; transform: scale(1.1);}
+  80%  {opacity: 1;   transform: scale(0.89);}
+  100% {opacity: 1;   transform: scale(1) translate3d(0,0,0);}
+}
+
 body {color:#55;}
 a, a:hover {color:#555; cursor:pointer;}
 a:focus,
@@ -112,6 +119,8 @@ input.btnstyle,
 .btnstyle.onlyIcon  i[class^="ambicon-"],
 .btnstyle.onlyIcon  i[class*=" ambicon-"]  {padding:0 4px; font-size:16x; line-height:24px; margin-left:0; }
 
+button:disabled,
+.btnstyle:disabled {opacity:0.5; cursor:not-allowed;}
 
 /*************************************/
 /* rangeSlider 재선언 */
@@ -256,6 +265,12 @@ body	 {min-height:600px;}
 .btnCalcDistance {width:62px; top:44px; right:10px;}
 /* 거리뷰 */
 .btnStreetView   {width:62px; top:73px; right:10px;}
+
+/*************************************/
+/* mapInnerBox // naverMap custom overlay */
+.mapInnerBox {position:relative; overflow:auto; width:300px;}
+.mibHeader {display:block; border:1px solid #000;}
+.mibBody {display:block; border:1px solid #000;}
 
 /*************************************/
 /* GNB  Area */
@@ -477,11 +492,28 @@ body	 {min-height:600px;}
 
 .joinStep04 {padding:30px 0 70px;}
 
+/*************************************/
+/* alertCont */
+.modal .modal-dialog.alertBox {width:450px;}
+.modal .modal-dialog.alertBox .modal-header {height:0;}
+.modal .modal-dialog.alertBox .modal-header .close {width:50px; height:50px; position:absolute; right:0; top:0; z-index:1;}
+.modal .modal-dialog.alertBox .modal-body {background:#fff;}
+.modal .modal-dialog.alertBox .modal-footer {text-align:center; padding:20px 20px; background:#f5f6f7; border-top:none;}
+.modal .modal-dialog.alertBox .modal-footer .btnstyle {min-width:;}
+.alertCont {text-align:center; padding:30px 0 25px;}
+.alertCont .iconBlock {display:block; width:70px; height:70px; border:4px solid #98c2f3; border-radius:50%; margin:-10px auto 15px; position:relative; animation:bounceIn 0.45s linear 0s 1 alternate;}
+.alertCont .iconBlock:before {display:block; content:''; width:4px; height:30px; border-radius:3px; background:#98c2f3; margin:10px auto 0;}
+.alertCont .iconBlock:after  {display:block; content:''; width:4px; height:5px;  border-radius:3px; background:#98c2f3;  margin:4px auto 0;}
+.alertCont .alertText {display:block; font-size:18px; padding:0px 20px; font-weight:500;}
+.alertCont .alertSubText {display:none; padding:15px 20px 0px; }
+
+/*************************************/
 /* heatmapList */
 .heatmapList {border:0px solid #000; overflow:; padding:20px;}
 .heatmapList li {padding:4px 0;}
 .heatmapList li:hover .rdchBox {animation:ani_down 0.2s ease-out 0s 1 alternate;}
 
+/*************************************/
 /* mulgunList */
 .mulgunList {border:0px solid #000; overflow:; padding:20px;}
 .mulgunList li {padding:4px 0;}
