--- a/css/map.css
+++ b/css/map.css
@@ -605,16 +605,22 @@ body	 {min-height:600px;}
 .alertCont .alertSubText {display:none; padding:15px 20px 0px; }
 
 /*************************************/
-/* heatmapList HeatMap 보기 */
+/* 좌메뉴 컨텐츠 - heatmapList HeatMap 보기 */
 .heatmapList {border:0px solid #000; overflow:; padding:20px;}
 .heatmapList li {padding:4px 0;}
 .heatmapList li:hover .rdchBox {animation:ani_down 0.2s ease-out 0s 1 alternate;}
 
 /*************************************/
-/* mulgunList 물건 보기 */
+/* 좌메뉴 컨텐츠 -  mulgunList 물건 보기  */
 .mulgunList {border:0px solid #000; overflow:; padding:20px;}
 .mulgunList li {padding:4px 0;}
 .mulgunList li:hover .rdchBox {animation:ani_down 0.2s ease-out 0s 1 alternate;}
+.mulgunList li .rdchBox i.icon {display:inline-block; margin:-2px 2px 0;}
+.mulgunList li .rdchBox i.icon img {height:24px; margin-top:-2px;}
+.mulgunList li .rdchBox i.icon.level  img {height:12px; vertical-align:middle; margin-top:0px;}
+.mulgunListTerm {border-top:1px solid #ccc; padding:15px 18px 10px}
+.mulgunListTerm .tit {display:block; overflow:hidden; font-weight:500; font-size:12px; margin:0 3px 5px;}
+
 
 /*************************************/
 /* 수지분석 */
